Fixed responsive light house issue regarding font size on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,7 @@ body {
 
 @media  screen and (max-width: 34.375em) {
   html{
-    font-size: 65%;
+    font-size: 75%;
   }
 }
 
